[package]
name = "aurora-rs"
version = "0.1.0"
authors = ["Euan Rochester <euan@rochester.me.uk>"]
license = "MIT.Apache-2.0"
readme = "README.md"
keywords = ["aurora","pv","solar","inverter"]
repository = "https://github.com/Eroc33/aurora"

[dependencies]
futures = "0.1.0"
tokio-core = "0.1.3"
tokio-proto = "0.1.0"
tokio-service = "0.1.0"
tokio-timer = "0.1.0"
crc16 = "0.3.3"
byteorder = "1.0.0"
enum_primitive = "0.1.1"
serde = "0.8.22"
serde_derive = "0.8.22"
error-chain = "0.7.2"

[dependencies.toml]
version = "0.2.1"
default-features = false
features = ["serde"]

[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"
branch = "tokio"

[dependencies.chrono]
version = "0.2.25"
features = ["serde"]

[[bin]]
doc = false
name = "main"
