[package]
name = "aurora-rs"
version = "0.1.0"
authors = ["Euan Rochester <euan@rochester.me.uk>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["aurora","pv","solar","inverter"]
repository = "https://github.com/Eroc33/aurora"

[dependencies]
futures = "0.1.0"
tokio-core = "0.1.3"
tokio-proto = {git="https://github.com/tokio-rs/tokio-proto.git"}
tokio-service = "0.1.0"
tokio-timer = "0.1.0"
crc16 = "0.3.3"
byteorder = "1.0.0"
enum_primitive = "0.1.1"

